--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 <p>在日常生活中顏色處處可見，</p>
 <p>對我們來說紅色、黃色、綠色、藍色能分辨這些色彩是多麼的理所當然，</p>
 <p>但如果有天你失去了這些色彩，世界不再鮮明了你會怎麼做呢？</p>
+<div class="clb">
+<h2>2021 Color Lab</h2>
+<h2>無色幻診</h2>
+<h6 class="wow animate__animated animate__fadeInLeft">顏色是所有人的</h6>
+</div>
 <p>我們希望能從色覺辨認障礙人士的第一視角來觀看這個展覽，</p>
 <p>透過展覽讓大家認識他們眼中的世界，</p>
 <p>也讓大家了解這個世界為“他們”帶來的『新視界』。</p><br><hr>
@@ -48,20 +53,10 @@
 
 <div class="row">
 
-<div class="col-md-4 text-center">
-<h3>認知區</h3>
-<p>認識何謂色盲、色盲的認知辨識</p>
+<div class="alls">
+<img src="./img/time.png" alt="">
 </div>
 
-<div class="col-md-4 text-center">
-<h3>實境體驗區</h3>
-<p>認識何謂色盲、色盲的認知辨識</p>
-</div>
-
-<div class="col-md-4 text-center">
-<h3>產品區</h3>
-<p>認識何謂色盲、色盲的認知辨識</p>
-</div>
 
 </div>
 </div>
@@ -70,12 +65,12 @@
 
     <!-------------------------------------------------------------------------------------->
 
-<h1 class="mb-5  wow animate__animated animate__backInLeft">－ 展區說明 －</h1>
+<h1 class="mb-4  wow animate__animated animate__flipInX">－ 展區說明 －</h1>
 
 <div class="description">
 <div class="container">
 
-<div class="row">
+<div class="ddes row">
 
 <div class="one col-sm-6">
 <img src="./img/眼科櫃台.jpg" alt="">
@@ -83,9 +78,10 @@
 
 <div class="two col-sm-6">
 <div class="text2 ">
-<h3>眼科櫃檯</h3><br>
+<h3>認知區＿眼科櫃檯</h3><br>
 <p>你們知道什麼是色盲嗎？</p>
-<p>你們知道什麼是色盲嗎？色盲又稱為“色覺辨識障礙”，在第一個環節我們讓大家了解”色覺辨識障礙”是什麼？</p>
+<p>色盲又稱為“色覺辨識障礙”，</p>
+<p>在第一個環節我們讓大家了解”色覺辨識障礙”是什麼？</p>
 </div>
 </div>
 
@@ -98,21 +94,26 @@
 
 <div class="two col-sm-6">
 <div class="text2 ">
-<h3>長廊</h3><br>
-<p>延續第一區的認知，是否覺得內心的想法與原先的自己慢慢不同呢？在這個空間我們希望大家能夠閉上雙眼想一想如果
-”我是色盲人士”，那又會是如何呢？</p>
+<h3>轉換區＿長廊</h3><br>
+<p>延續第一區的認知，</p>
+<p>是否覺得內心的想法與原先的自己慢慢不同呢？</p>
+<p>在這個空間我們希望大家能夠閉上雙眼想一想如果”我是色盲人士”，</p>
+<p>那又會是如何呢？</p>
 </div>
 </div>
 
 
 <div class="one col-sm-6">
-<img src="./img/黃藍.jpg" alt="">
+<img src="./img/222235 (1).png" alt="">
 </div>
 
 <div class="two col-sm-6">
 <div class="text2 ">
-<h3>病房</h3><br>
-<p>以色盲人士的第一視角所展現的實景區，分別為紅綠色盲與黃藍色盲兩個區域，實境體驗主要是想帶領大家進到”色盲的視界”讓大家身歷其境體會到色盲人士的視野與我們視野的不同之處。</p>
+<h3>實境體驗區＿病房</h3><br>
+<p>以色盲人士的第一視角所展現的實景區，</p>
+    <p>分別為紅綠色盲與黃藍色盲兩個區域，</p>
+    <p>實境體驗主要是想帶領大家進到”色盲的視界”</p>
+    <p>讓大家身歷其境體會到色盲人士的視野與我們視野的不同之處。</p>
 </div>
 </div>
 
@@ -124,8 +125,12 @@
 
 <div class="two col-sm-6">
 <div class="text2">
-<h3>緊急照明</h3><br>
-<p>體驗完視野的差別後，內心是否對色盲人士多了更深的一層體悟呢？視覺辨識障礙者在生活上所帶來的不便與影響你感受到了嗎？在此如果你能為他們帶來更美好的”視界”你會怎麼做？</p>
+<h3>轉換區＿緊急照明</h3><br>
+<p>體驗完視野的差別後，</p>
+    <p>內心是否對色盲人士多了更深的一層體悟呢？</p>
+    <p>視覺辨識障礙者在生活上所帶來的不便與影響你感受到了嗎？</p>
+      <p>  在此如果你能為他們帶來更美好的”視界”你會怎麼做？</p>
+    
 </div>
 </div>
 
@@ -134,9 +139,13 @@
 </div>
 
 <div class="two col-sm-6">
-<div class="text2 ">
-<h3>無障礙的視界</h3><br>
-<p>最後一個環節將介紹這個世界為了色盲人士所做出的改變，無障礙設計其理想目標就是”無障礙”，我們帶來世界各地的人們為了視覺辨識障礙者設計出更便於生活的產品，利用設計創造出最友善的”無障礙環境”。</p>
+<div class="text2" style="width: 700px;">
+<h3>產品區＿無障礙的視界</h3><br>
+<p>最後一個環節將介紹這個世界為了色盲人士所做出的改變，</p>
+  <p>無障礙設計其理想目標就是”無障礙”，</p>  
+   <p>我們帶來人們為了視覺辨識障礙者設計出更便於生活的產品，</p> 
+   <p>利用設計創造出最友善的”無障礙環境”。</p>
+    
 </div>
 </div>
 
@@ -230,18 +239,34 @@
 <hr>
 
 <h1 class="mb-5">－ 展覽資訊 －</h1>
+
+
+<div class="container  mt-0">
+
+<div class="row">
+
+<div class="alls">
+<img src="./img/color.png" alt="">
+</div>
+</div>
+</div>
+
+<h1 class="mb-5">－ 購票資訊 －</h1>
+
+<div class="container  mt-0">
+
+<div class="row">
+
+<div class="simg mb-5">
+<img class="" src="./img/money.png" alt="">
+</div>
+</div>
+</div>
+
 <div class=" information col-sm-12 justify-content-center wow animate__animated animate__pulse">
-<div class="card" style="width:550px;box-shadow:2px 2px 5px rgba(0, 0, 0, 0.2);">
+<div class="card mt-5" style="width:550px;box-shadow:2px 2px 5px rgba(0, 0, 0, 0.2);">
   <div class="card-body">
-    <p class="card-text">展覽名稱：無色幻診 Color Lab</p>
-    <p class="card-text">展覽地點：星球實驗創作空間</p>
-    <p class="card-text">展覽期間：2021.03.21 (日)~ 2021.4.21(三)</p>
-    <p class="card-text">展覽時間：每日10:00 ~ 18:00 (17:00 停止售票、入場)</p>
-    <p class="card-text">電話查詢：03-6206-0678</p>
-    <h5 class="mt-5 mb-4"><b>展場票價</b></h5>
-    <p> <b>全票　　350 元</b></p>
-    <p> <b>優待票　280 元</b></p>
-    <h5 class="mt-5 mb-4"><b>購票方式</b></h5>
+    <h5 class="mt-3 mb-4"><b>購票方式</b></h5>
     <p>現場購票：現金、手機支付、信用卡支付</p>
     <p class="mb-0">線上購票：信用卡支付</p>
 <sub style="color:#fd0000;">*爲避免現場購票踴躍，延誤您入場時間及心情，建議您多使用網路購票與手機（ APP ）購票。</sub>
